--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
         "Command Prompt": {
             "path": ["${env:windir}\\System32\\cmd.exe"],
             "env": { 
-                "PATH": "${env:windir}\\Downloads\\PortableGit\\bin;D:\\Softwares\\PortableGit\\bin"
+                "PATH": "${env:USERPROFILE}\\Downloads\\node-v18.18.0-win-x64\\node-v18.18.0-win-x64;${env:windir}\\Downloads\\PortableGit\\bin;D:\\Softwares\\PortableGit\\bin"
             }
         }
     },
