--- a/package.json
+++ b/package.json
@@ -1,5 +1,33 @@
 {
   "name": "playwright-playground",
   "version": "0.1.0",
-  "private": true
+  "private": true,
+  "module": "src/index.ts",
+  "main": "dist/main.js",
+  "scripts": {
+    "build": "webpack --mode=development",
+    "start": "webpack serve --mode development --static dist",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "@playwright/browser-chromium": "^1.50.1",
+    "@playwright/test": "^1.50.1",
+    "@types/node": "^20.10.5",
+    "browserify-fs": "^1.0.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "cross-env": "^7.0.3",
+    "json-loader": "^0.5.7",
+    "path-browserify": "^1.0.1",
+    "playwright": "^1.50.1",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "ts-loader": "^9.4.1",
+    "tty-browserify": "^0.0.1",
+    "typescript": "^4.8.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-node-externals": "^3.0.0"
+  }
 }
